releases/v2/README.md
# Damascus Emergency Inventory Desktop — Version 2.0.2

هذا الإصدار هو نسخة سطح مكتب مستقلة من تطبيق **نظام مستودع الإسعاف**. يعيد استخدام نفس واجهة الويب المبنية من المشروع الحالي، ويشغّل خادم الـAPI وقاعدة PGlite محليًا داخل Electron، لذلك يعمل الإعداد الأول لحساب المدير على جهاز Windows دون الحاجة إلى تشغيل خادم منفصل.

## المتطلبات

- Node.js 20 أو أحدث
- pnpm 10 أو أحدث
- لا يحتاج التشغيل المعتاد إلى PostgreSQL أو خادم API خارجي.
- يمكن اختياريًا استخدام API خارجي عبر `DAMASCUS_API_URL`.

## تشغيل الإصدار من المصدر

من جذر المستودع:

```bash
cd releases/v2
pnpm install
pnpm run dev
```

في Windows PowerShell:

```powershell
cd releases/v2
pnpm install
pnpm run dev
```

إذا كان المطلوب استخدام API منشور على خادم آخر، ضع عنوانه في `DAMASCUS_API_URL`. يجب أن يكون العنوان هو أصل الخادم فقط، مثل `https://example.com`، وليس مسار `/api`. عند عدم ضبط المتغير، يستخدم التطبيق API المحلي المضمّن.

## إنشاء حزمة سطح المكتب

```bash
pnpm run package
```

ينشئ Electron Builder حزمًا حسب نظام التشغيل الذي يتم البناء عليه. لإنشاء مجلد تشغيل غير مثبت أولًا:

```bash
pnpm run package:dir
```

## ملاحظات الإصدار

- رقم الإصدار: `2.0.2`
- هذا الإصدار مبني من آخر commit على الفرع `main`، ويشمل كامل تحديثات التطبيق الحالية.
- يتضمن تحديثات إدارة القوائم المنسدلة والبحث في المواد والتجهيزات والمستلمين وأسباب الخروج.
- يتضمن تحديثات نماذج الإدخال والإخراج والتسوية ودورة حياة المخزون وصفحة إعدادات النظام.
- يتضمن تحديثات API وعقود OpenAPI والأنواع والعمليات المولدة اللازمة لهذه التحديثات.
- حزمة Windows Portable: `Damascus Emergency Inventory 2.0.2.exe`
- ملف ZIP المرفق بالإصدار يحتوي مجلد التشغيل الكامل، وليس ملف التنفيذ وحده.
- المصدر: واجهة `artifacts/web` وواجهة API `artifacts/api-server` من نفس المستودع.
- لا توجد نسخة واجهة منفصلة مكتوبة يدويًا؛ أمر `prepare-app` يبني الواجهة والـAPI وينسخهما إلى الحزمة.
- يعالج هذا الإصدار استعادة حزم `.dme-sync` في تثبيتات سطح المكتب القديمة بإضافة جداول المعاينة ونقاط التراجع وكتالوج النسخ تلقائياً دون حذف البيانات الحالية.
- يتم حفظ قاعدة البيانات المحلية في مجلد بيانات التطبيق داخل حساب Windows، وتظهر صفحة إعداد المدير تلقائيًا عندما لا يوجد مدير مسجّل.
- لا يحتوي هذا الإصدار على أسرار أو رموز وصول. يتم تمرير عنوان الـAPI من خلال `DAMASCUS_API_URL`.